--- a/articles/templates/articles/_article_content.html
+++ b/articles/templates/articles/_article_content.html
@@ -1,8 +1,9 @@
 {% load i18n %}
-<div id="article-content" class="article">
-    <h2 class="title">{% trans article.title %}</h2>
 
-    {{ article.rendered_content|safe }}
+<div id="article-content" class="article">
+    <h2 class="title">{{article.title}}</h2>
+
+    {{ article.content|safe }}
 </div>
 
 {% for att in article.attachments.all %}
