--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -3,10 +3,11 @@
 
 {% block title %}{% trans 'Articles' %}{% endblock %}
 
-{% block articles-content %}
-<h2 class="title">{% trans 'Articles' %}{% ifnotequal paginator.num_pages 1 %}, {% trans 'page' %} {{ page_obj.number }}{% endifnotequal %}</h2>
+{% block articles_content %}
+    <h2 class="title">
+        {% trans 'Articles' %}{% ifnotequal paginator.num_pages 1 %}, {% trans 'page' %} {{ page_obj.number }}{% endifnotequal %}</h2>
 
-{% for article in page_obj.object_list %}
-{% include 'articles/_articles.html' %}
-{% endfor %}
+    {% for article in page_obj.object_list %}
+        {% include 'articles/_articles.html' %}
+    {% endfor %}
 {% endblock %}
