--- a/articles/templates/articles/in_month.html
+++ b/articles/templates/articles/in_month.html
@@ -3,7 +3,7 @@
 
 {% block title %}{% trans 'Articles From' %} {{ month|date:"F Y" }}{% endblock %}
 
-{% block articles-content %}
+{% block articles_content %}
 <h2>{% trans 'Articles From' %} {{ month|date:"F Y" }}{% ifnotequal paginator.num_pages 1 %}, {% trans 'page' %} {{ page_obj.number }}{% endifnotequal %}</h2>
 
 {% for article in page_obj.object_list %}
