--- a/articles/templates/articles/uncategorized_article_list.html
+++ b/articles/templates/articles/uncategorized_article_list.html
@@ -3,7 +3,7 @@
 
 {% block title %}{% trans 'Uncategorized Articles' %}{% endblock %}
 
-{% block articles-content %}
+{% block articles_content %}
 <h2>{% trans 'Uncategorized Articles' %}{% ifnotequal paginator.num_pages 1 %}, {% trans 'page' %} {{ page_obj.number }}{% endifnotequal %}</h2>
 
 {% for article in page_obj.object_list %}
